testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpressionAnonymousWithSub.errors.txt
index.js(9,16): error TS2339: Property 'Sub' does not exist on type 'typeof (Anonymous class)'.


==== index.js (1 errors) ====
    module.exports = class {
        /**
         * @param {number} p
         */
        constructor(p) {
            this.t = 12 + p;
        }
    }
    module.exports.Sub = class {
                   ~~~
!!! error TS2339: Property 'Sub' does not exist on type 'typeof (Anonymous class)'.
        constructor() {
            this.instance = new module.exports(10);
        }
    }
    